--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,4 +4,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
+    <script src="https://kit.fontawesome.com/c88455a4e9.js" crossorigin="anonymous"></script>
 </head>
