--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,4 +5,8 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
     <script src="https://kit.fontawesome.com/c88455a4e9.js" crossorigin="anonymous"></script>
+    <script src="/js/gallery.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => activateGallery());
+    </script>
 </head>
